# Memoria

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  create_memory_links.py  docker-compose.yml  requirements.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  SETUP_POSTGRES.md  __init__.py  backend_setup.md  create_graph.cypher  database.py  directory_tree.txt  init_db.py  llm_placeholders.py  main.py  models.py  placeholders.py  pyproject.toml  requirements.txt  sample_data.py  workflow.py
backend/.github/prompts/: pg_sqlalchemy_prompt.prompt.md  project.prompt.md
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: models.py  schema.sql  session.py
backend/app/routers/: ask.py  feedback.py  health.py  memories.py  retrieve.py  temporal.py  verification.py
backend/app/schemas/: memory.py
backend/app/services/: entity_linker.py  indexer.py  llm_client.py  memory_manager.py  orchestrator.py  reranker.py  retriever.py  temporal_scorer.py  verifier.py
backend/documents/: Customer_Segmentation_2025Q3.parquet
backend/documents/Parent1/: LongTail_SKU_Performance.xlsx  Ops_Constraints_DC_Network.xlsx  Weather_SE_2w.csv
backend/documents/Parent2/: Global_Shipping_Status_API.json  Hurricane_Simulation_GulfCoast.yaml  Price_Elasticity_Model_v5.json  Price_Elasticity_Model_v5.pkl  Supplier_ETA_Snapshot.csv  Supplier_ETA_Snapshot.parquet  Supplier_Performance_Q3.csv  supplier_eta_gen.py  topickle.py
backend/documents/Parent3/: Elasticity_Refit_Results_C31.csv  Market_Intel_DailyFeed.json  Price_Elasticity_Model_v5.pkl  toparquet_customer_seg.py
backend/documents/Parent5/: Supplier_CO2_Emissions.csv  Sustainability_2025_Targets.docx  asn_compliance_2025-10.csv  asn_compliance_2025-10.parquet  defect_log_2025-10.csv  defect_log_2025-10.parquet  toparquet.py  vendor_monthly_2025-10.csv  vendor_monthly_2025-10.parquet
backend/milvus/: helpers.py
backend/milvus/readmes/: GraphEmbeddings_collection.md  ReasoningBank_collection.md
backend/milvus/scripts_with_data/: GraphEmbeddingsData.jsonl  ReasoningBankData.jsonl  graphembedding_filler.py  helpers.py  reasoning_entries.py  (+1 more)
backend/neo4j/: create_graph.cypher  neo4jHelpers.py
backend/src/: API_DOCS.md
(+1987 files in other folders)
