[project]
name = "memoria"
version = "0.1.0"
description = "long-term memory for enterprise AI Agents"
authors = [
    {name = "Hussain Zaidi",email = "syedhussainzaidi2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy (>=2.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "pymilvus (>=2.6.6,<3.0.0)",
    "openai[aiohttp] (>=2.15.0,<3.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = true

[[tool.poetry.packages]]
include = "src"

[[tool.poetry.packages]]
include = "neo4j_db"

[[tool.poetry.packages]]
include = "milvus"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
